--- a/PressHmi/View/Dialogs/MacroDataInputDialog.xaml
+++ b/PressHmi/View/Dialogs/MacroDataInputDialog.xaml
@@ -41,7 +41,7 @@
                 </Grid.RowDefinitions>
                 <TextBlock Foreground="{DynamicResource DataInputDialogTitleForeground}" Text="{Binding DataInputTitle}" Grid.Row="0" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,0,0,0"/>
                 <TextBox x:Name="inputdata" Text="{Binding InputData}" Grid.Row="1" Width="320" Height="50" FontSize="16"/>
-                <Grid Grid.Row="2" Visibility="{Binding Display}">
+                <Grid Grid.Row="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="20"/>
                         <ColumnDefinition Width="60"/>
