--- a/PressHmi/View/Para/ParaSubProcManagementPage.xaml
+++ b/PressHmi/View/Para/ParaSubProcManagementPage.xaml
@@ -2,12 +2,29 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
       xmlns:local="clr-namespace:PressHmi.View"
+      xmlns:conv="clr-namespace:PressHmi.View.Converters" 
       mc:Ignorable="d" 
       d:DesignHeight="608" d:DesignWidth="940"
       Title="ParaSubProcManagementPage">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}"/>
+        </i:EventTrigger>
+        <i:EventTrigger EventName="Unloaded">
+            <i:InvokeCommandAction Command="{Binding UnloadedCommand}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Page.Resources>
+        <Style x:Key="FontAwesome">
+            <Setter Property="TextElement.FontFamily" Value="pack://application:,,,/PressHmi;component/View/FontAwesome/#FontAwesome" />
+        </Style>
+
+        <conv:IsConsistentColorConverter x:Key="_isccc"/>
+        <conv:IsConsistentStringConverter x:Key="_iscsc"/>
+
         <DataTemplate x:Key="Wrapitem">
             <StackPanel  Height="50" Width="270" Margin="5" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <!--<TextBlock Text="&#xf0f6;" HorizontalAlignment="Center" FontWeight="Light" VerticalAlignment="Center"
@@ -16,6 +33,34 @@
                        FontFamily="Microsoft YaHei UI Light"  Margin="10,0,0,0"  VerticalAlignment="Center"
                        FontSize="16"/>
             </StackPanel>
+        </DataTemplate>
+
+        <DataTemplate x:Key="Wrapitem2">
+            <Grid  Height="24" Width="600" Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="280"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="50"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="{Binding IsConsistent,Converter={StaticResource _iscsc}}"  HorizontalAlignment="Left" 
+                           Foreground="{Binding IsConsistent,Converter={StaticResource _isccc}}"
+                 FontFamily="Microsoft YaHei UI Light"  Margin="10,0,0,0"  VerticalAlignment="Center"
+                 FontSize="16"/>
+                <TextBlock Grid.Column="1" Text="{Binding Name}"  HorizontalAlignment="Left" Foreground="Black" TextWrapping="WrapWithOverflow"
+                FontFamily="Microsoft YaHei UI Light"  Margin="10,0,0,0"  VerticalAlignment="Center"
+                FontSize="16"/>
+                <TextBlock Grid.Column="2" Text="{Binding Value}"  HorizontalAlignment="Right" Foreground="Black" TextWrapping="WrapWithOverflow"
+                FontFamily="Microsoft YaHei UI Light"  Margin="10,0,10,0"  VerticalAlignment="Center"
+                FontSize="16"/>
+                <TextBlock Grid.Column="3" Text="{Binding FileValue}"  HorizontalAlignment="Right" Foreground="Black" TextWrapping="WrapWithOverflow"
+                FontFamily="Microsoft YaHei UI Light"  Margin="10,0,10,0"  VerticalAlignment="Center"
+                FontSize="16"/>
+                <TextBlock Grid.Column="4" Text="{Binding UpDown}"  HorizontalAlignment="Center" Foreground="Black" TextWrapping="WrapWithOverflow"
+                    FontFamily="Microsoft YaHei UI Light"  Margin="10,0,0,0"  VerticalAlignment="Center"
+                    FontSize="16"/>
+            </Grid>
         </DataTemplate>
     </Page.Resources>
 
@@ -41,6 +86,7 @@
             <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource HmiBorder}">
                 <Grid>
+
                     <ListBox x:Name="list2"  ScrollViewer.HorizontalScrollBarVisibility="Hidden"   ItemTemplate="{StaticResource Wrapitem}"
                                          ItemsSource="{Binding ProcFiles}" SelectedItem="{Binding SelProcFile}" Foreground="White">
                         <ListBox.Resources>
@@ -69,9 +115,9 @@
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Width="120" Height="45" Margin="10,0,10,0" Style="{StaticResource btn-info}" Content="刷新配方列表" Command="{Binding RefreshFileCommand}"/>
-                <Button Width="120" Height="45" Margin="10,0,10,0" Style="{StaticResource btn-warning}" Content="保存当前工艺参数" Command="{Binding SaveToPcCommand}"/>
-                <Button Width="120" Height="45" Margin="10,0,10,0" Style="{StaticResource btn-primary}" Content="加载工艺参数文件" Command="{Binding LoadAndShowCommand}"/>
-                <Button Width="120" Height="45" Margin="10,0,10,0" Style="{StaticResource btn-success}" Content="生效工艺参数" Command="{Binding SaveAndApplicationCommand}"/>
+                <Button Width="120" Height="45" Margin="10,0,10,0" Style="{StaticResource btn-primary}" Content="显示配方" Command="{Binding LoadAndShowCommand}"/>
+                <Button Width="120" Height="45" Margin="10,0,10,0" Style="{StaticResource btn-warning}" Content="保存配方" Command="{Binding SaveToPcCommand}"/>
+                <Button Width="120" Height="45" Margin="10,0,10,0" Style="{StaticResource btn-success}" Content="生效配方" Command="{Binding SaveAndApplicationCommand}"/>
             </StackPanel>
             <Grid Grid.Row="1"  Margin="2,2,2,2">
                 <Grid.RowDefinitions>
@@ -86,6 +132,44 @@
                 <Border Grid.Row="1" BorderThickness="1,0,1,1" Margin="1,0,1,1"
                         BorderBrush="{DynamicResource HmiBorder}">
                     <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="24"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="20"/>
+                                <ColumnDefinition Width="280"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="50"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="{DynamicResource TextSmallSize}"
+                                   Text="工艺参数名称"/>
+                            <TextBlock Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="{DynamicResource TextSmallSize}"
+                                   Text="当前CNC值"/>
+                            <TextBlock Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="{DynamicResource TextSmallSize}"
+                                   Text="配方文件值"/>
+                            <TextBlock Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="{DynamicResource TextSmallSize}"
+                                   Text="对比情况"/>
+                        </Grid>
+                        <ListBox Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Hidden"   ItemTemplate="{StaticResource Wrapitem2}"
+                                         ItemsSource="{Binding RecipesInfos}" Foreground="White">
+                            <ListBox.Resources>
+                                <Style TargetType="ListBoxItem">
+                                    <Style.Resources>
+                                        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#FFA1A1A1"/>
+                                    </Style.Resources>
+                                </Style>
+                            </ListBox.Resources>
+                            <ListBox.Template>
+                                <ControlTemplate TargetType="{x:Type ListBox}">
+                                    <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+                                        <WrapPanel Orientation="Vertical" IsItemsHost="True" ScrollViewer.CanContentScroll="True"/>
+                                    </ScrollViewer>
+                                </ControlTemplate>
+                            </ListBox.Template>
+                        </ListBox>
                     </Grid>
                 </Border>
             </Grid>
